Mudança icone do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Mais Vida - Studio de Musculação" />
     <meta property="og:description" content="Transforme seu corpo e sua vida com os melhores profissionais e equipamentos de última geração." />
     <meta name="theme-color" content="#4FD14F" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="logo_vida_circular_preto.png" />
     <link rel="preconnect" href="https://unpkg.com" />
   </head>
 
