feat: mudanca de logo, e novo setor do site (galeria)

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mais Vida - Studio de Musculação</title>
-    <meta name="description" content="Mais Vida - Studio de Musculação. Transforme seu corpo e sua vida com os melhores profissionais e equipamentos de última geração." />
+    <title>Mais Vida - Studio de Treinamento</title>
+    <meta name="description" content="Mais Vida - Studio de Treinamento. Transforme seu corpo e sua vida com os melhores profissionais e equipamentos de última geração." />
     <meta name="author" content="Mais Vida" />
     <meta property="og:image" content="/og-image.png" />
-    <meta property="og:title" content="Mais Vida - Studio de Musculação" />
+    <meta property="og:title" content="Mais Vida - Studio de Treinamento" />
     <meta property="og:description" content="Transforme seu corpo e sua vida com os melhores profissionais e equipamentos de última geração." />
     <meta name="theme-color" content="#4FD14F" />
     <link rel="icon" href="logo_vida_circular_preto.png" />
